Upgrade dependencies and refactor a bit the supervisor agent.